@@ -183,13 +183,22 @@ def exception_happened(etype, value, tb):
     scroll_traceback.set_policy(gtk.POLICY_AUTOMATIC, gtk.POLICY_AUTOMATIC)
     scroll_traceback.add(textview_traceback)
     scroll_traceback.set_size_request(-1, 300)
+    button_copy = image_stock_button(gtk.STOCK_COPY, _('Copy text to clipboard'))
+    def clicked():
+        buffer = textview_traceback.get_buffer()
+        start = buffer.get_start_iter()
+        end = buffer.get_end_iter()
+        clipboard = gtk.clipboard_get()
+        clipboard.set_text(buffer.get_text(start, end))
+    button_copy.connect('clicked', lambda w: clicked())
     button_report_bug = image_stock_button(gtk.STOCK_DIALOG_WARNING, _('Click here to report bug via web-page') )
     button_report_bug.connect('clicked', lambda w: report_bug() )
     button_close = image_stock_button(gtk.STOCK_CLOSE, _('Close'))
     button_close.connect('clicked', lambda w: window.destroy())
     bottom_box = gtk.HBox(False, 10)
-    bottom_box.pack_start(button_report_bug, False)
-    bottom_box.pack_start(button_close, False)
+    bottom_box.pack_end(button_close, False)
+    bottom_box.pack_end(button_report_bug, False)
+    bottom_box.pack_end(button_copy, False)
     
     vbox = gtk.VBox(False, 5)
     vbox.pack_start(title_box, False)
